fix bug & checking
//กลุ่ม
1. เพิ่มเข้ากลุ่ม ลบออกกลุ่ม ทำงานแล้ว ดึงข้อมูลโชว์แปลกๆ
2. ยังไม่มีเพิ่ม อาจารย์ ในกลุ่ม (สองท่าน)

//งาน
1. เพิ่มงานประเมินรายงาน ยังไม่สำเร็จ
2. การแก้ไขประเมินรายงาน ยังไม่สำเร็จ
3. ลบงานประเมินรายงาน ยังไม่สำเร็จ

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -786,10 +786,15 @@ html .col-header, body .col-header {
 }
 html .input-year-groupStudent, html .input-search-groupStudent, body .input-year-groupStudent, body .input-search-groupStudent {
   width: 30%;
+  height: 35px;
   padding: 0px 5px;
 }
+html .btn-search-groupStudent, body .btn-search-groupStudent {
+  height: 35px;
+  width: 5%;
+}
 html .relative-btnBox, body .relative-btnBox {
-  height: 25px;
+  height: 35px;
   position: relative;
 }
 html .yearControllup, body .yearControllup {
