--- a/src/App.scss
+++ b/src/App.scss
@@ -829,10 +829,15 @@ $colorBGnav:#e0e0e0;
         }
         .input-year-groupStudent,.input-search-groupStudent{
             width: 30%;
+            height: 35px;
             padding:0px 5px;
         }
+        .btn-search-groupStudent{
+            height: 35px;
+            width: 5%;
+        }
             .relative-btnBox{
-                height: 25px;
+                height: 35px;
                 position: relative;
             }
             .yearControllup{
