--- a/src/App.scss
+++ b/src/App.scss
@@ -1576,6 +1576,7 @@ $colorBGnav:#e0e0e0;
             height: 100%;
             width: 100%;
             border: 1px solid $colorBorderDrop;
+            font-weight: bold;
         }
         .btn-rowinput-modalboxContentwork{
             height: 100%;
@@ -1664,10 +1665,12 @@ $colorBGnav:#e0e0e0;
         .date-special-boxcontentwork input{
             width: 100%;
             height: 35px;
+            font-weight: bold;
         }
         .input-special-boxcontentwork input{
             width: 95%;
             height: 35px;
+            font-weight: bold;
         }
         .inputradio-special-boxcontentwork input{
             margin: 5px;
