--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1516,6 +1516,7 @@ html .input-rowinput-modalboxContentwork, body .input-rowinput-modalboxContentwo
   height: 100%;
   width: 100%;
   border: 1px solid #9e9e9e;
+  font-weight: bold;
 }
 html .btn-rowinput-modalboxContentwork, body .btn-rowinput-modalboxContentwork {
   height: 100%;
@@ -1602,10 +1603,12 @@ html .date-special-boxcontentwork, body .date-special-boxcontentwork {
 html .date-special-boxcontentwork input, body .date-special-boxcontentwork input {
   width: 100%;
   height: 35px;
+  font-weight: bold;
 }
 html .input-special-boxcontentwork input, body .input-special-boxcontentwork input {
   width: 95%;
   height: 35px;
+  font-weight: bold;
 }
 html .inputradio-special-boxcontentwork input, body .inputradio-special-boxcontentwork input {
   margin: 5px;
