--- a/src/App.scss
+++ b/src/App.scss
@@ -671,6 +671,7 @@ $colorBGnav:#e0e0e0;
             width: 80%;
             height: 25px;
             border: 1px solid $colorBorderDrop;
+            font-weight: bold;
         }
     .contentboxInput-InboxModal{
        width: 100%;
@@ -2812,6 +2813,7 @@ $colorBGnav:#e0e0e0;
             border-radius: 5px;
             width: 90%;
             padding-left: 8px;
+            font-weight: bold;
         }
     .inputButtonUpdown,.inputButtonDrop{
         position: relative;
