--- a/src/css/App.css
+++ b/src/css/App.css
@@ -632,6 +632,7 @@ html .box-input-contentInboxModal input, body .box-input-contentInboxModal input
   width: 80%;
   height: 25px;
   border: 1px solid #9e9e9e;
+  font-weight: bold;
 }
 html .contentboxInput-InboxModal, body .contentboxInput-InboxModal {
   width: 100%;
@@ -2717,6 +2718,7 @@ html .input-modalBox input, body .input-modalBox input {
   border-radius: 5px;
   width: 90%;
   padding-left: 8px;
+  font-weight: bold;
 }
 html .inputButtonUpdown, html .inputButtonDrop, body .inputButtonUpdown, body .inputButtonDrop {
   position: relative;
