--- a/src/App.scss
+++ b/src/App.scss
@@ -378,6 +378,15 @@ $colorBGnav:#e0e0e0;
                 justify-content: center;
                 background-color: #e0e0e0;
             }
+            .form-search-student{
+                width: 100%;
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                background-color: #cfd8dc;
+            }
+            
                 .box-menu-2 span{
                     padding-right: 10px;
                     background-color: #e0e0e0;
@@ -592,18 +601,23 @@ $colorBGnav:#e0e0e0;
         display: flex;
         align-items: center;
     }
+    .form-search-doctor{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+    }
         .input-navDoctor-search{
             width: 25%;
-            height: 60%;
+            height: 35px;
             margin-left: 10px;
             font-weight: bold;
             font-size: 16px;
             padding-left: 5px;
-
         }
         .btn-navDoctor-search{
             width: 7%;
-            height: 60%;
+            height: 35px;
         }
     .btn-close-ctDoctor{
         width: 80%;
@@ -836,6 +850,12 @@ $colorBGnav:#e0e0e0;
         background-color: $colorBGnav;
     }
         .col-header{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .form-search-group{
+            width: 100%;
             display: flex;
             align-items: center;
             justify-content: center;
