--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2494,8 +2494,50 @@ html .input-shownamefile-filecontent, body .input-shownamefile-filecontent {
 }
 html .box-showfile, body .box-showfile {
   width: 100%;
-  height: 440px;
+  height: 340px;
   margin-top: 15px;
+}
+html .boxshow-comment-img, body .boxshow-comment-img {
+  border: 2px solid #9e9e9e;
+  width: 100%;
+  height: 180px;
+  scroll-snap-type: mandatory;
+  overflow-y: auto;
+  padding: 5px 15px;
+}
+html .img-peviewshow, body .img-peviewshow {
+  width: 100px;
+  height: 100px;
+  display: inline-block;
+  position: relative;
+  margin: 5px;
+}
+html .img-peviewshow img, body .img-peviewshow img {
+  object-fit: contain;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  margin-right: 2px;
+  width: 80px;
+  height: 80px;
+}
+html .img-peviewshow img:hover, body .img-peviewshow img:hover {
+  box-shadow: 0 0 2px 1px rgba(27, 119, 39, 0.8);
+}
+html .box-btndownload, body .box-btndownload {
+  padding: 5px 0;
+  display: flex;
+}
+html .box-btndownload button, body .box-btndownload button {
+  border: 1px solid #607d8b;
+  border-radius: 2px;
+  padding: 5px;
+  font-size: 16px;
+  background-color: #607d8b;
+  color: #fefefe;
+}
+html .box-btndownload button:hover, body .box-btndownload button:hover {
+  background-color: #37474f;
 }
 html .show-file-filecontent, body .show-file-filecontent {
   height: 100%;
