--- a/src/App.scss
+++ b/src/App.scss
@@ -2579,6 +2579,13 @@ $colorBGnav:#e0e0e0;
         width: 100%;
         height: auto;
         margin-top: 10px;
+        .boxmenufile-span-reason{
+            text-align: center;
+            span{
+                font-size: 13px;
+                color: red;
+            }
+        }
     }
         .inputfile-pdf-filecontent{
             display: none;
@@ -2700,7 +2707,7 @@ $colorBGnav:#e0e0e0;
         align-items: center;
         padding: 10px;
         width: 100%;
-        height: 50px;
+        height: auto;
         margin: 5px auto;
         font-weight: bold;
     }
